<resources>
    <string name="app_name">Lab4_300103204</string>
    <string name="app_title">Sports Team Manager</string>

    <string name="name_hint">(Please enter a team name)</string>
    <string name="name_label">Team Name</string>

    <string name="address_hint">(Please enter a ZIP code)</string>
    <string name="address_label">Team Address</string>

    <string name="new_avatar_title">Create new avatar</string>
    <string name="new_avatar_button">LOAD FROM PHONE</string>

    <string name="button_text">OPEN IN GOOGLE MAPS</string>
</resources>